# GamePrototype

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/: Engine.cpp  Engine.hpp  Logger.cpp  Logger.hpp  ResourceManager.cpp  ResourceManager.hpp  State.cpp  State.hpp
Core/Settings/: Config.cpp  Config.hpp  CursorPack.cpp  CursorPack.hpp  StringsManager.cpp  StringsManager.hpp
Dependencies/: CMakeLists.txt
Extensions/: RoundedRectangleShape.cpp  RoundedRectangleShape.hpp
Helpers/: Concepts.hpp  CursorHelper.cpp  CursorHelper.hpp  DrawableHelper.cpp  DrawableHelper.hpp  EngineHelper.cpp  EngineHelper.hpp  ObjectHelper.hpp  Random.hpp  RenderTextureHelper.cpp  RenderTextureHelper.hpp  Scheduler.cpp  Scheduler.hpp  Updateable.hpp  WindowsHelper.cpp  WindowsHelper.hpp
Resources/Documents/: Config.xml
Resources/Documents/Animations/: Button_OK_Pressed.xml
Resources/Documents/CursorPacks/: CursorPack_Default.xml
Resources/Documents/Dialogs/English/: TestDialog.xml
Resources/Documents/Windows/: Window_Login.xml
Resources/Documents/en/: Strings.xml
Resources/Documents/ru/: Strings.xml
Resources/Shaders/: BarrelFishEyeF.glsl  Default.glsl  GaussianBlurF.glsl  GlowF.glsl
Resources/Videos/: Boot.webm
States/: BootingState.cpp  BootingState.hpp  MenuState.cpp  MenuState.hpp
States/Tests/: AnimationState.cpp  AnimationState.hpp  DebugState.cpp  DebugState.hpp  DialogState.cpp  DialogState.hpp  WindowState.cpp  WindowState.hpp
States/Windows/: LoginState.cpp  LoginState.hpp
UI/: AnimatedText.cpp  AnimatedText.hpp  Animation.cpp  Animation.hpp  Fade.cpp  Fade.hpp
UI/Dialog/: Dialog.cpp  Dialog.hpp  DialogBit.hpp
UI/ProgressBar/: NormalProgressBar.hpp  ProgressBarBase.hpp  VerticalProgressBar.hpp
UI/Window/: Button.cpp  Button.hpp  Window.cpp  Window.hpp  WindowComponent.hpp
